<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activity.auth.AuthenticateUser">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_authenticate"
        android:background="@color/colorTaskTb"
        android:elevation="@dimen/space_small"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <RelativeLayout
        android:layout_below="@id/tb_authenticate"
        android:padding="@dimen/space_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_auth_label"
            android:text="@string/verify_you_prompt"
            android:layout_marginTop="@dimen/space_huge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_pin_input"
            android:hint="@string/enter_pin_hint"
            android:inputType="numberPassword"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_below="@id/tv_auth_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_bad_creds"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/error_wrong_creds"
            android:textColor="@color/colorWarn"
            android:layout_below="@id/et_pin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_submit_pin"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/next_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_bad_creds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>