<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_taskoverviewframe"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_quadrant_1"
            android:layout_weight="1"
            android:background="@color/colorOne"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/quad_1_descr"
                android:textSize="@dimen/text_size_4"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_quadrant_1_num"
                    android:textSize="@dimen/text_size_8"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_below="@id/tv_quadrant_1_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_text"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_quadrant_2"
            android:layout_weight="1"
            android:background="@color/colorTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/quad_2_descr"
                android:textSize="@dimen/text_size_4"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_quadrant_2_num"
                    android:textSize="@dimen/text_size_8"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_below="@id/tv_quadrant_2_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_text"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_quadrant_3"
            android:layout_weight="1"
            android:background="@color/colorThree"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/quad_3_descr"
                android:textSize="@dimen/text_size_4"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_quadrant_3_num"
                    android:textSize="@dimen/text_size_8"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_below="@id/tv_quadrant_3_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_text"/>

            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_quadrant_4"
            android:background="@color/colorFour"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/quad_4_descr"
                android:textSize="@dimen/text_size_4"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_quadrant_4_num"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/text_size_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_below="@id/tv_quadrant_4_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_text"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>